--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "^1.1.16",
     "@auth/drizzle-adapter": "^1.7.4",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tiptap/extension-underline": "^2.11.5",
